[tool.poetry]
name = "battleship"
version = "0.1.0"
description = "CLI Battleship Game"
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
